# Sentinalai

./: .env.example  .env.template  .gitignore  AGENTS.md  AGENT_SPEC.md  ARCHITECTURE_AUDIT.md  CLAUDE.md  Dockerfile  Dockerfile.bff  Dockerfile.demo  Dockerfile.stubs  PROGRESS.md  README.md  SECURITY_AUDIT_REPORT.md  SENTINELAI_PRODUCTION_READINESS_REPORT.md  agentcore.yaml  agentcore_runtime.py  deploy_demo.sh  docker-compose.agui.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  otel-collector-config.yaml  pyproject.toml  remediation_templates.yaml  render.yaml  requirements-agentcore.txt  requirements.txt  run_demo.sh  sentinalai_cli.py
.claude/: settings.json
agents/: hypothesis-scorer.md  incident-classifier.md  investigation-coordinator.md  loop-operator.md  rca-writer.md
agui/: Dockerfile.agui  __init__.py  demo.html  event_bus.py  graph_builder.py  improvement_engine.py  main.py  mtti.py  oip_adapter.py  operator_telemetry.py  receipt_store.py  replay_engine.py  requirements-agui.txt  state_store.py  synthetic_generator.py  ws_manager.py
config/: ambassador-server.yaml
database/: connection.py  ops_persistence.py  persistence.py  schema.sql
docs/: AGUI_DESIGN.md  MTTI_VALIDATION.md  OPERATIONAL_IMPROVEMENT_ENGINE.md  OPERATOR_WORKFLOW_INTELLIGENCE.md  PRODUCT_CONVERGENCE.md  sentinelai_thousandeyes_gap_analysis.md  thousandeyes_connection_validation.md  thousandeyes_correlation_rules.md  thousandeyes_enterprise_use_cases.md  thousandeyes_final_recommendation.md  thousandeyes_graph_and_patterns.md  thousandeyes_mcp_discovery.md  thousandeyes_normalized_schema.md  thousandeyes_rca_value_map.md  thousandeyes_sentinelai_architecture.md  thousandeyes_test_plan.md
eval/: adaptive_thresholds.json  blast_radius_history.json  calibration_map.json  cascade_tracker.json  causal_graph.jsonl  co_failure_index.json  episodic_memory.jsonl  evolved_strategy.json  experience_store.json  gap_patterns.json  ground_truth.json  incident_git_index.json  knowledge_graph.json  neural_confidence_calibrator.json  pattern_registry.json  recurrence_index.json  retrieval_telemetry.jsonl
integrations/: notification_router.py  tenant_config.py
intelligence/: __init__.py  background_runner.py  bridge.py  causal_graph.py  change_tracker.py  confidence_calibrator.py  decision_trace.py  dependency_graph.py  episodic_memory.py  evidence_graph.py  incident_graph.py  intel_writer.py  investigation_store.py  itsm_writebacks.py  pattern_detector.py  pattern_intelligence.py  pattern_signature.py  prediction_store.py  replay_seed.py  resolution_knowledge.py  resolution_memory.py  resolution_outcome.py  schema.py  semantic_search.py  service_profile.py  (+3 more)
(+2073 files in other folders)
