[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinalai"
version = "0.1.0"
description = "Autonomous incident RCA agent - deterministic, policy-governed SRE agent"
requires-python = ">=3.11"
license = {text = "Proprietary"}
keywords = ["sre", "observability", "rca", "incident-response", "bedrock", "agentcore"]
dependencies = [
    "anthropic>=0.39.0,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    "openai>=1.6.0,<2.0.0",
    "opentelemetry-api>=1.24.0,<2.0.0",
    "opentelemetry-sdk>=1.24.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0,<2.0.0",
    "pgvector>=0.2.4,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "strands-agents>=0.1.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 120

[tool.coverage.run]
source = ["supervisor", "workers", "database", "knowledge"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["supervisor*", "workers*", "database*", "knowledge*"]
